<resources>
    <!-- Login page -->
    <string name="accessibility_saxo_logo">The SAXO Bank logo</string>
    <string name="app_name">Pocket Money</string>
    <string name="app_creator">by SAXO Bank</string>
    <string name="placeholder_cpr">CPR number</string>
    <string name="placeholder_service_code">Service Code (4 digits)</string>
    <string name="button_login">Login!</string>
    <string name="help">I need help&#8230;</string>

    <string name="error_missing_cpr">Oops! You forgot your CPR :)</string>
    <string name="error_missing_service_code">Oops! You forgot your Service Code :)</string>
    <string name="error_cpr_wrong_length">Oops! Your CPR has to be 10 numbers long :)</string>
    <string name="error_service_code_wrong_length">Oops! Your Service Code has to be 4 numbers long :)</string>
    <string name="error_invalid_login">Oops! That\'s not the right CPR number or Service Code :)</string>

    <!-- Main Menu page -->
    <string name="textView_welcome">Welcome </string>
    <string name="button_view_balance">View balance</string>
    <string name="button_buy_currencies">Buy currencies</string>
    <string name="button_sell_currencies">Sell currencies</string>
    <string name="button_view_leaderboard">View leaderboard</string>
    <string name="button_log_out">Log out</string>

    <!-- Balance -->
    <string name="textView_myBalance">My Balance</string>
</resources>
