<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:src="@drawable/saxo_logo"
            android:contentDescription="@string/accessibility_saxo_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/cpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_cpr"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/service_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_service_code"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/button_login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLength="4"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWarning"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>